Small updates to main section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <body>
         <header>
             <nav>
-                <div class="social-nav">
-                    <i class="fab fa-github"></i>
-                    <i class="fab fa-linkedin"></i>
-                    <i class="far fa-envelope"></i>
+                <div class="navbar">
+                    <div class="social-nav">
+                        <i class="fab fa-github"></i>
+                        <i class="fab fa-linkedin"></i>
+                        <i class="far fa-envelope"></i>
+                    </div>
                     <div class="hamburger">
                         <div class="line"></div>
                         <div class="line"></div>
@@ -32,15 +34,20 @@
             </nav>
         </header>
         <main>
-            <section class="main-section" id="intro">
-                <h1 class="site-title">Chris Ogami</h1>
-                <h2 class="site-info" id="job-title">Full-stack web developer</h2>
-                <h2 class="site-info" id="location">Los Angeles, CA</h3>
-            </section>
-            <section class="main-section" id="projects">
-
+            <section class="main-section" id="banner">
+                <div class="section-info">
+                    <h1 class="site-title">Chris Ogami</h1>
+                    <h2 class="site-info" id="job-title">Full-stack web developer</h2>
+                    <h2 class="site-info" id="location">Los Angeles, CA</h2>
+                </div>
             </section>
             <section class="main-section" id="about">
+
+            </section>
+            <section class="main-section" id="project-1">
+
+            </section>
+            <section class="main-section" id="project-2">
 
             </section>
             <section class="main-section" id="contact"> 
