Updated main section for HTML and CSS

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 </div>
                 <ul class="menu-links">
                     <li>
-                        <a href="#" class="menu-items">About</a>
+                        <a href="#project-1" class="menu-items">Projects</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-items">Projects</a>
+                        <a href="#about" class="menu-items">About</a>
                     </li>
                     <li>
-                        <a href="#" class="menu-items">Contact</a>
+                        <a href="#contact" class="menu-items">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -36,22 +36,98 @@
         <main>
             <section class="main-section" id="banner">
                 <div class="section-info">
-                    <h1 class="site-title">Chris Ogami</h1>
-                    <h2 class="site-info" id="job-title">Full-stack web developer</h2>
-                    <h2 class="site-info" id="location">Los Angeles, CA</h2>
+                    <div class="section-caption">
+                        <h1 class="site-title">Chris Ogami</h1>
+                        <hr>
+                        <h2 class="site-info" id="job-title">Full-stack web developer</h2>
+                        <h2 class="site-info" id="location">Los Angeles, CA</h2>
+                    </div>
+                </div>
+                <div class="section-visual">
+                    <div class="image-overlay"></div>
+                    <div class="section-image"></div>
+                </div>
+            </section>
+            <section class="main-section" id="project-1">
+                <div class="section-info">
+                    <div class="section-caption">
+                        <h1 class="site-title">Coffee Coterie</h1>
+                        <hr>
+                        <h2 class="site-info" id="job-title">A responsive website that adapts to various display sizes.</h2>
+                    </div>
+                </div>
+                <div class="section-visual">
+                    <div class="image-overlay"></div>
+                    <div class="section-image"></div>
+                </div>
+            </section>
+            <section class="main-section" id="project-2">
+                <div class="section-info">
+                    <div class="section-caption">
+                        <h1 class="site-title">Megan Won Photography</h1>
+                        <hr>
+                        <h2 class="site-info" id="job-title">A company website created for a photography business.</h2>
+                    </div>
+                </div>
+                <div class="section-visual">
+                    <div class="image-overlay"></div>
+                    <div class="section-image">Insert Image</div>
                 </div>
             </section>
             <section class="main-section" id="about">
-
-            </section>
-            <section class="main-section" id="project-1">
-
-            </section>
-            <section class="main-section" id="project-2">
-
+                <div class="section-info">
+                    <div class="section-caption">
+                        <h1 class="site-title">About me</h1>
+                    </div>
+                </div>
+                <div class="section-visual">
+                    <div class="image-overlay"></div>
+                    <div class="section-image">
+                        <h2>Resume</h2>
+                        <hr>
+                        <h3>Languages I Speak</h3>
+                        <br>
+                        <h4>HTML, CSS, JavaScript</h4>
+                        <br>
+                        <h3>Work and Education</h3>
+                        <br>
+                        <h4>KPMG, LLP (January 2019 to Present)</h4>
+                        <h5>Senior Associate, Financial Due Diligence</h5>
+                        <br>
+                        <h4>Ernst & Young, LLP (August 2016 to January 2019)</h4>
+                        <h5>Senior Associate, Audit</h5>
+                        <br>
+                        <h4>Pepperdine University (2012 to 2016)</h4>
+                        <h5>B.S. Accounting</h5>
+                        <br>
+                        <h3>Courses and Certifications</h3>
+                        <br>
+                        <h4>Codecademy's Full Stack Web Development Course (2021)</h4>
+                        <br>
+                        <h4>Certified Public Accountant (2017 to Present)</h4>
+                    </div>
+                </div>
             </section>
             <section class="main-section" id="contact"> 
-
+                <div class="section-info">
+                    <div class="section-caption">
+                        <h1 class="site-title">Contact</h1>
+                    </div>
+                </div>
+                <div class="section-visual">
+                    <div class="image-overlay"></div>
+                    <div class="section-image">
+                        <h2>Interested in working together?</h2>
+                        <hr>
+                        <p>I am currently open to work and looking for job opportunities as a full stack developer.</p>
+                        <br>
+                        <a href="https://github.com/crogmi" class="button" target="_blank">See my GitHub<i class="fab fa-github"></i></a>
+                        <br>
+                        <a href="https://www.linkedin.com/in/chris-ogami-cpa-bb192ba9/" class="button" target="_blank">Reach me at LinkedIn<i class="fab fa-linkedin"></i></a>
+                        <br>
+                        <a href="mailto:chrisogami16@gmail.com" class="button" target="_blank">Contact me via email<i class="far fa-envelope"></i></a>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
