--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/fee542fdca.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -134,7 +134,7 @@
             <p id="copyright">&copy; Christopher Ogami 2021</p>
         </footer>
 
-        <script src="/js/app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 
 
