Updated scrolling, color schemes, and cleaned up margins between text

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <nav>
                 <div class="navbar">
                     <div class="social-nav">
-                        <i class="fab fa-github"></i>
-                        <i class="fab fa-linkedin"></i>
-                        <i class="far fa-envelope"></i>
+                        <a href="https://github.com/crogmi" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/chris-ogami-cpa-bb192ba9/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:chrisogami16@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
                     </div>
                     <div class="hamburger">
                         <div class="line"></div>
@@ -84,27 +84,19 @@
                     <div class="image-overlay"></div>
                     <div class="section-image">
                         <h2>Resume</h2>
-                        <hr>
+                        <hr class="image-divide">
                         <h3>Languages I Speak</h3>
-                        <br>
-                        <h4>HTML, CSS, JavaScript</h4>
-                        <br>
+                        <h4 class="next-row">HTML, CSS, JavaScript</h4>
                         <h3>Work and Education</h3>
-                        <br>
                         <h4>KPMG, LLP (January 2019 to Present)</h4>
-                        <h5>Senior Associate, Financial Due Diligence</h5>
-                        <br>
+                        <h5 class="next-row">Senior Associate, Financial Due Diligence</h5>
                         <h4>Ernst & Young, LLP (August 2016 to January 2019)</h4>
-                        <h5>Senior Associate, Audit</h5>
-                        <br>
-                        <h4>Pepperdine University (2012 to 2016)</h4>
-                        <h5>B.S. Accounting</h5>
-                        <br>
+                        <h5 class="next-row">Senior Associate, Audit</h5>
+                        <h4>Pepperdine University (Graduated 2016)</h4>
+                        <h5 class="next-row">B.S. Accounting</h5>
                         <h3>Courses and Certifications</h3>
-                        <br>
-                        <h4>Codecademy's Full Stack Web Development Course (2021)</h4>
-                        <br>
-                        <h4>Certified Public Accountant (2017 to Present)</h4>
+                        <h4 class="next-row">Codecademy's Full Stack Web Development Course (2021)</h4>
+                        <h4 class="next-row">Certified Public Accountant (2017 to Present)</h4>
                     </div>
                 </div>
             </section>
@@ -118,14 +110,11 @@
                     <div class="image-overlay"></div>
                     <div class="section-image">
                         <h2>Interested in working together?</h2>
-                        <hr>
-                        <p>I am currently open to work and looking for job opportunities as a full stack developer.</p>
-                        <br>
-                        <a href="https://github.com/crogmi" class="button" target="_blank">See my GitHub<i class="fab fa-github"></i></a>
-                        <br>
-                        <a href="https://www.linkedin.com/in/chris-ogami-cpa-bb192ba9/" class="button" target="_blank">Reach me at LinkedIn<i class="fab fa-linkedin"></i></a>
-                        <br>
-                        <a href="mailto:chrisogami16@gmail.com" class="button" target="_blank">Contact me via email<i class="far fa-envelope"></i></a>
+                        <hr class="image-divide">
+                        <p class="next-row">I am currently open to work and looking for job opportunities as a full stack developer.</p>
+                        <a href="https://github.com/crogmi" class="button next-row" target="_blank">See my GitHub<i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/chris-ogami-cpa-bb192ba9/" class="button next-row" target="_blank">Reach me at LinkedIn<i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:chrisogami16@gmail.com" class="button next-row" target="_blank">Contact me via email<i class="far fa-envelope"></i></a>
                     </div>
                 </div>
             </section>
@@ -136,7 +125,4 @@
 
         <script src="js/app.js"></script>
     </body>
-
-
-
 </htmL>
