Updated mouse scroll behavior and image links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htmL>
+<html class="scroll-container">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,15 +58,15 @@
                 </div>
                 <div class="section-visual">
                     <div class="image-overlay"></div>
-                    <div class="section-image"></div>
+                    <a href="https://crogmi.github.io/responsive-club-website/" target="_blank"><div class="section-image"></div></a>
                 </div>
             </section>
             <section class="main-section" id="project-2">
                 <div class="section-info">
                     <div class="section-caption">
-                        <h1 class="site-title">Megan Won Photography</h1>
+                        <h1 class="site-title">Podcast Website</h1>
                         <hr>
-                        <h2 class="site-info" id="job-title">A company website created for a photography business.</h2>
+                        <h2 class="site-info" id="job-title">A company website created for a podcast business.</h2>
                     </div>
                 </div>
                 <div class="section-visual">
